# shooting_stars

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: starry-field.txt
src/: main.rs
