[package]
name = "shootingstars"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = [ "dynamic_linking", "jpeg", "wav" ] }
bevy_rapier2d = { version = "0.27.0", features = [ "debug-render-2d" ] }
leafwing-input-manager = "0.15.0"
bevy_particle_systems = "0.13.0"
bevy-inspector-egui = "0.25.1"
bevy_scoreboard = "0.1.8"
bevy_cleancut = "0.2.7"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = false
